# Dp_inference_framework

./: README.md
course1/log/: Kuiper.129ac4aafeb3.root.log.INFO.20230731-114734.5233  Kuiper.129ac4aafeb3.root.log.INFO.20230731-120106.12427  Kuiper.129ac4aafeb3.root.log.INFO.20230731-120306.13549  Kuiper.129ac4aafeb3.root.log.INFO.20230731-121943.22293  Kuiper.129ac4aafeb3.root.log.INFO.20230731-122245.23969  Kuiper.129ac4aafeb3.root.log.INFO.20230731-122541.25646  Kuiper.129ac4aafeb3.root.log.INFO.20230731-122825.27151  Kuiper.129ac4aafeb3.root.log.INFO.20230731-123143.29063  Kuiper.129ac4aafeb3.root.log.INFO.20230731-123248.29663  Kuiper.129ac4aafeb3.root.log.INFO.20230731-123253.29738  Kuiper.129ac4aafeb3.root.log.INFO.20230731-123407.30483  Kuiper.129ac4aafeb3.root.log.INFO.20230731-123504.31089  Kuiper.129ac4aafeb3.root.log.INFO.20230801-014236.64700  Kuiper.129ac4aafeb3.root.log.INFO.20230801-014320.65182  Kuiper.129ac4aafeb3.root.log.INFO.20230801-014627.66905  Kuiper.129ac4aafeb3.root.log.INFO.20230801-015010.69186  Kuiper.129ac4aafeb3.root.log.INFO.20230801-020906.79322  Kuiper.129ac4aafeb3.root.log.INFO.20230801-021233.81239  Kuiper.129ac4aafeb3.root.log.INFO.20230801-021604.83176  Kuiper.129ac4aafeb3.root.log.INFO.20230801-021819.84462  Kuiper.129ac4aafeb3.root.log.INFO.20230801-022605.88858  Kuiper.INFO  (+14 more)
course1/test/: axby.cpp
course4/: CMakeLists.txt  transformer.py
course4/log/: Kuiper.ERROR  Kuiper.INFO  Kuiper.WARNING  Kuiper.d79ff5ad346b.root.log.INFO.20240912-020101.713060  Kuiper.d79ff5ad346b.root.log.WARNING.20240912-020101.713060
(+104 files in other folders)
